<resources>
    <string name="app_name">AdviseNation</string>
    <string name="app_product_review">Product Review</string>
    <string name="app_ankoins">AnKoins</string>
    <string name="app_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">AdviseNation</string>
    <string name="login_email">User Email</string>
    <string name="login_password">Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="log_in">Log In</string>
    <string name="signup">Signup</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="user_address">Address :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="language">Date Of Birth :</string>
    <string name="enterpassword">Password</string>
    <string name="name">Name :</string>
    <string name="lastname">Last Name :</string>
    <string name="password">Password</string>
    <string name="email">Email :</string>
    <string name="gendermale">M</string>
    <string name="genderFemale">F</string>
    <string name="phonelength">Enter Valid Phone Number</string>
    <string name="passwordNotmatch">Password Does Not Match</string>
    <string name="error_404">Please enter valid information</string>
    <string name="error_404_transferAnkoins">Sender id not found</string>
    <string name="error_404_reg">Username and Password Already Register</string>
    <string name="error_404_referral">User with referral code not found</string>
    <string name="error_404_unfollow">User cannot follow own comment :( </string>
    <string name="error_401">Please Register first</string>
    <string name="error_403">Forbidden</string>
    <string name="error_400">Old password incorrect.</string>
    <string name="error_500">Login session time out...</string>
    <string name="error_412">Insufficient AnKoins</string>
    <string name="network_notfound">Please check your network connection</string>
    <string name="network_poor">Network connection is too poor</string>
    <string name="random_error">Server not responding</string>
    <string name="loading_data">Loading data...</string>
    <string name="submit_rate">Thanking you for your valuable comment !</string>
    <string name="purchase_success">Purchase Success !</string>
    <string name="enough_koins">You have not enough coins. \n Please buy coins and try again</string>
    <string name="unfollow">Unfollow permission denied</string>
    <string name="transfer_anikoinstotransfer">Number Of Ankoins To Transfer</string>
    <string name="transfer_anikoinswhomtotransfer">Email Address To Whom Transfer</string>
    <string name="transfer_remaiinganikoinstotransfer">Remaining Ankoins</string>
    <string name="transfer_ankoinsbutton">Confirm Transfer</string>
    <string name="tranjection_ankoinTranjectidtxt">Transaction  Id :</string>
    <string name="tranjection_ankoinDateOftrajection">Date Of Transaction  :</string>
    <string name="tranjection_spentAnkoins">Ankoins Spent :</string>
    <string name="tranjection_purpose">Purpose :</string>
    <string name="set_current_password">Enter your new password</string>
    <string name="set_previous_password">Enter your current password</string>
    <string-array name="dashboard_title">
        <item>Electronics</item>
        <item>Events</item>
        <item>Organization</item>
        <item>ShowRoom</item>
        <item>Vehicals</item>
        <item>Repair</item>
        <item>Data</item>
        <item>Ragister</item>
        <item>Performance</item>
    </string-array>
    <string name="dashboard_ictext1">Electronics</string>
    <string name="dashboard_ictext2">Events</string>
    <string name="dashboard_ictext3">Organization</string>
    <string name="dashboard_ictext4">ShowRoom</string>
    <string name="dashboard_ictext5">Vehicals</string>
    <string name="dashboard_ictext6">Repair</string>
    <string name="dashboard_ictext7">Data</string>
    <string name="dashboard_ictext8">Ragister</string>
    <string name="dashboard_ictext9">Performance</string>
    <string name="addevent_upload">Upload Poduct Image</string>
    <string name="Entername">Enter Name</string>
    <string name="Enteremails">Enter Email</string>
    <string name="EnterAge">Enter Phone</string>
    <string name="EnterLastName">Enter LastName</string>
    <string name="large_text"><![CDATA[<string name=\"large_text\">         \"Material is the metaphor.\\n\\n\"          \"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\\n\\n\"          \"Bold, graphic, intentional.\\n\\n\"          \"The foundational elements of print based design typography, grids, space, scale, color, \"         \"and use of imagery guide visual treatments. These elements do far more than please the \"         \"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge \"         \"imagery, large scale typography, and intentional white space create a bold and graphic \"         \"interface that immerse the user in the experience.\\n\"         \"An emphasis on user actions makes core functionality immediately apparent and provides \"         \"waypoints for the user.\\n\\n\"          \"Motion provides meaning.\\n\\n\"          \"Motion respects and reinforces the user as the prime mover. Primary user actions are \"         \"inflection points that initiate motion, transforming the whole design.\\n\"         \"All action takes place in a single environment. Objects are presented to the user without \"         \"breaking the continuity of experience even as they transform and reorganize.\\n\"         \"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. \"         \"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\\n\\n\"          \"3D world.\\n\\n\"          \"The material environment is a 3D space, which means all objects have x, y, and z \"         \"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the \"         \"positive z-axis extending towards the viewer. Every sheet of material occupies a single \"         \"position along the z-axis and has a standard 1dp thickness.\\n\"         \"On the web, the z-axis is used for layering and not for perspective. The 3D world is \"         \"emulated by manipulating the y-axis.\\n\\n\"          \"Light and shadow.\\n\\n\"          \"Within the material environment, virtual lights illuminate the scene. Key lights create \"         \"directional shadows, while ambient light creates soft shadows from all angles.\\n\"         \"Shadows in the material environment are cast by these two light sources. In Android \"         \"development, shadows occur when light sources are blocked by sheets of material at \"         \"various positions along the z-axis. On the web, shadows are depicted by manipulating the \"         \"y-axis only. The following example shows the card with a height of 6dp.\\n\\n\"          \"Resting elevation.\\n\\n\"          \"All material objects, regardless of size, have a resting elevation, or default elevation \"         \"that does not change. If an object changes elevation, it should return to its resting \"         \"elevation as soon as possible.\\n\\n\"          \"Component elevations.\\n\\n\"          \"The resting elevation for a component type is consistent across apps (e.g., FAB elevation \"         \"does not vary from 6dp in one app to 16dp in another app).\\n\"         \"Components may have different resting elevations across platforms, depending on the depth \"         \"of the environment (e.g., TV has a greater depth than mobile or desktop).\\n\\n\"          \"Responsive elevation and dynamic elevation offsets.\\n\\n\"          \"Some component types have responsive elevation, meaning they change elevation in response \"         \"to user input (e.g., normal, focused, and pressed) or system events. These elevation \"         \"changes are consistently implemented using dynamic elevation offsets.\\n\"         \"Dynamic elevation offsets are the goal elevation that a component moves towards, relative \"         \"to the component’s resting state. They ensure that elevation changes are consistent \"         \"across actions and component types. For example, all components that lift on press have \"         \"the same elevation change relative to their resting elevation.\\n\"         \"Once the input event is completed or cancelled, the component will return to its resting \"         \"elevation.\\n\\n\"          \"Avoiding elevation interference.\\n\\n\"          \"Components with responsive elevations may encounter other components as they move between \"         \"their resting elevations and dynamic elevation offsets. Because material cannot pass \"         \"through other material, components avoid interfering with one another any number of ways, \"         \"whether on a per component basis or using the entire app layout.\\n\"         \"On a component level, components can move or be removed before they cause interference. \"         \"For example, a floating action button (FAB) can disappear or move off screen before a \"         \"user picks up a card, or it can move if a snackbar appears.\\n\"         \"On the layout level, design your app layout to minimize opportunities for interference. \"         \"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere \"         \"when a user tries to pick up one of cards.\\n\\n\"     </string>
    <string name="forgetname">Enter First Name</string>
    <string name="forgetLasstname">Enter Last Name</string>
    <string name="forgetEmails">Enter Vaid Email Address</string>
    <string name="forgetPassword">Enter Password</string>
    <string name="forgetConfirmPassword">Confirm Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="forgetDOb">Select Date Of Birth</string>
    <string name="correct_email">Please enter your email address</string>
    <string name="alert_message">Please rate the quality of the product</string>
    <string name="alert_message_referral">Do you have Referral Code?</string>
    <string name="alert_validation">Please enter your comment</string>
    <string name="alert_validation_referral">Please enter Referral code</string>
    <string name="note_referral_one">Accept your friends invite by his/her referral code and earn free Ankoins.</string>
    <string name="note_referral_two">Note: Referral program is only applicable for first time registrations. You can still signup by leaving this field blank.</string>
</resources>