<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="20dp"
        android:orientation="vertical"
        tools:ignore="InefficientWeight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="InefficientWeight,NestedWeights">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:layout_marginBottom="20dp"
                    >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="6dp"
                    android:id="@+id/edtankointotrnsfer"
                    android:background="@drawable/border_blacksqure"
                    android:hint="@string/transfer_anikoinstotransfer"
                    />
                </RelativeLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            tools:ignore="InefficientWeight,NestedWeights">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="6dp"
                    android:id="@+id/edtankoinwhomtotrnsfer"
                android:background="@drawable/border_blacksqure"
                android:hint="@string/transfer_anikoinswhomtotransfer"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="InefficientWeight,NestedWeights">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="6dp"
                android:id="@+id/edtankoinRemaing"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_blacksqure"
                android:hint="@string/transfer_remaiinganikoinstotransfer"
                />
        </LinearLayout>




    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_ankoinsbutton"
            android:id="@+id/btnconfirmankoins"
            />
    </RelativeLayout>
</LinearLayout>