<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentTrans"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:id="@+id/linear_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textColor="@color/tabSelectedIconColor"
                        android:textColorHint="@color/tabSelectedIconColor"
                        android:textSize="@dimen/login_text_size" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/email"
                        android:textColor="@color/tabSelectedIconColor"
                        android:textColorHint="@color/tabSelectedIconColor"
                        android:textSize="@dimen/login_text_size" />

                    <EditText
                        android:id="@+id/edtAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:textColor="@color/tabSelectedIconColor"
                        android:textColorHint="@color/tabSelectedIconColor"
                        android:textSize="@dimen/login_text_size" />



                        <TextView
                            android:id="@+id/txtDateofbirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="25dp"
                            android:hint="@string/language"
                            android:textColor="@color/tabSelectedIconColor"
                            android:textColorHint="@color/tabSelectedIconColor"
                            android:textSize="@dimen/login_text_size" />





                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="25dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender"
                            android:textColor="@color/tabSelectedIconColor"
                            android:textColorHint="@color/tabSelectedIconColor"
                            android:textSize="@dimen/login_text_size" />




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        >

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"

                            >
                            <RadioButton
                                android:id="@+id/sign_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:text="Male"
                                android:checked="true"
                                android:textColor="@color/tabSelectedIconColor" />

                            <RadioButton
                                android:id="@+id/sign_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female"
                                android:textColor="@color/tabSelectedIconColor" />



                        </RadioGroup>



                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_signup"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="true"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@color/def"
                android:textSize="@dimen/login_text_button"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>