<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/dialog_title"
        >
        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/alert_message_referral"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/dialog_footer"

        android:orientation="vertical">

        <TextView
            android:id="@+id/reating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:isIndicator="false"
            android:text="@string/note_referral_one"
            android:textColor="@color/primary_text"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_dark"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="10dp"
            android:isIndicator="false"
            android:text="@string/note_referral_two"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comments"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_dark"
            android:inputType="textCapCharacters"
            android:hint="Referral code (optional)"
            android:textSize="@dimen/login_text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="left"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/alert_validation"
            android:text="@string/alert_validation_referral"
            android:textColor="@color/color_red_alert"
            android:maxLines="2"
            android:textSize="@dimen/text_size_large"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Submit"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/not_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/submit"
                android:text="Skip"
                android:layout_marginRight="20dp"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
