<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/border_black"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_tranjectionId"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="1"
                android:textColor="@color/textBlack"
                android:text="@string/tranjection_ankoinTranjectidtxt"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_tranjectIDdetails"
                android:layout_weight=".6"
                android:textSize="@dimen/text_size_extra_large"
                android:textColor="@color/textBlack"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_Dateoftrajection"
            android:textSize="@dimen/text_size_large"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/textBlack"
            android:text="@string/tranjection_ankoinDateOftrajection"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tranjectDateDetails"
            android:layout_weight=".6"
            android:textSize="@dimen/text_size_extra_large"
            android:textColor="@color/textBlack"
            />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_SeptAnkoins"
                android:textSize="@dimen/text_size_large"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/textBlack"
                android:text="@string/tranjection_spentAnkoins"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_SeptAnkoinsDetails"
                android:layout_weight=".6"
                android:textSize="@dimen/text_size_extra_large"
                android:textColor="@color/textBlack"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_purpose"
                android:layout_margin="4dp"
                android:text="@string/tranjection_purpose"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/text_size_extra_large"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_purposeDiscription"
                android:background="@drawable/border_black"
                android:textSize="@dimen/text_size_large"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                />



        </LinearLayout>



    </LinearLayout>

</RelativeLayout>